Moved GameObject class to separate file.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/default.css">
   <script src="./components/stack_collection.js"></script>
+  <script src="./components/game_object.js"></script>
   <script src="./components/card.js"></script>
   <script src="./components/stack.js"></script>
   <script src="./components/pile.js"></script>
